# llvm-project-internship

clang/lib/Frontend/: CompilerInvocation.cpp
clang/tools/clang-linker-wrapper/: ClangLinkerWrapper.cpp
llvm/runtimes/: CMakeLists.txt
openmp/: CMakeLists.txt
openmp/libomptarget/plugins-nextgen/: CMakeLists.txt
openmp/libomptarget/plugins-nextgen/riscv/: CMakeLists.txt
openmp/libomptarget/plugins-nextgen/riscv/src/: debug_helpers.hpp  device.hpp  global_handler.hpp  kernel.hpp  plugin.hpp  rtl.cpp
openmp/libomptarget/plugins-nextgen/riscv/src/riscvaccel/: elf_loader.hpp  riscvaccel.cpp  riscvaccel.hpp
openmp/libomptarget/plugins-nextgen/shm/: CMakeLists.txt
openmp/libomptarget/plugins-nextgen/shm/src/: control_register.hpp  device.hpp  device_image.hpp  elf_loader.cpp  elf_view.cpp  global_handler.hpp  kernel.hpp  plugin.hpp  rtl.cpp  shm_allocator.hpp  shm_api_wrap.cpp  shm_api_wrap.hpp  shm_debug.hpp  shm_err.hpp  shm_object.cpp  shm_object.hpp  span.hpp
openmp/libomptarget/plugins-nextgen/shm/src/device/: device_ctrl_register.hpp
openmp/libomptarget/plugins-nextgen/shm/src/elf_img_loader/: elf_loader.cpp  elf_loader.hpp  elf_view.cpp  elf_view.hpp
openmp/libomptarget/plugins-nextgen/shm/src/shm_helpers/: shm_debug.hpp  shm_errs.hpp  span.hpp
openmp/libomptarget/plugins-nextgen/shm/src/shm_support/: shm_api_wrap.hpp  shm_errs.hpp  shm_support.cpp  shm_support.hpp
openmp/libomptarget/plugins-nextgen/shm/src/templates/: global_handler.hpp
openmp/libomptarget/src/: rtl.cpp
